<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.juegayaprende.MainActivity"
    android:background="@color/colorPrimaryDark"
    >

    <ImageView
        android:id="@+id/interrogaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/inicio" />


    <TextView
        android:id="@+id/texto_presentacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#052fff"
        app:layout_constraintBottom_toBottomOf="@+id/interrogaciones"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/interrogaciones"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Jugar"
        app:layout_constraintBottom_toBottomOf="@+id/interrogaciones"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="juega"
        />

    <TextView
        android:id="@+id/edificios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edificio"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintTop_toBottomOf="@+id/interrogaciones"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ciudades"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/ciudades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ciudad"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintTop_toBottomOf="@+id/edificios"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/subtitulo"
        />


    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
         />



</android.support.constraint.ConstraintLayout>
